@@ -15,22 +15,22 @@ DIST lang-de.jar 32964 RMD160 70c8afb831b4f339e69ecff44f34d0b716d33854 SHA1 9462
 DIST lang-en_GB-20061020.jar 17696 RMD160 204ae6225c662747caee6d4a2939c5fd9bd8bc3b SHA1 f7969e4f999df494af60e5ec34d223c870ae2e52 SHA256 e1d764d9ebfcbcc4976882dd3473c054e1aee49291c95182ddc7df579e4c3fd0
 DIST lang-fr-20061020.jar 25917 RMD160 a20ebdc5db09cba0620492575359cf3e946e61e7 SHA1 8bd870fbf93864175bf7dfc4e4f7a578f3b1b456 SHA256 917bdb721fa23d383816f72fdb1832bbd211008efa4090005cac1d7ddde13beb
 DIST lang-ro-20061020.jar 26379 RMD160 c6cc106cced18731cb99cc0d28fd815d47dc0a3b SHA1 e2aab11a902dc8c88abcb01f399546c45f746e2b SHA256 9f9089b5accf8365ec8e03a5bd87f65de717099f05047ecbd8d4cd251f037972
-EBUILD josm-1.5_p486.ebuild 1458 RMD160 77209c061d83a03801b47ab5eea847116206d6aa SHA1 5ae5a034b703f76c8f3f611f75a514acfd3179cd SHA256 0b81a0f1258cb25e9ee1005fa2f95aff9a9a72051d8cd914458b57cdda0b6749
-MD5 5bc9e8aa37b034ba65a9df9dcc4120b6 josm-1.5_p486.ebuild 1458
-RMD160 77209c061d83a03801b47ab5eea847116206d6aa josm-1.5_p486.ebuild 1458
-SHA256 0b81a0f1258cb25e9ee1005fa2f95aff9a9a72051d8cd914458b57cdda0b6749 josm-1.5_p486.ebuild 1458
-EBUILD josm-9999.ebuild 710 RMD160 5ca711f28c5daf4bffe04bb3ef04f7c6e504ad2c SHA1 6a2d3d212fbbc47e9ca57fcd39611bc2fd9d1aba SHA256 c256f3567c3298b755f30fc22dec475b4ee7381ef84c9384d242ca66f2a08bbf
-MD5 e6bc9c152eeeb5bfff2be54652d3ce79 josm-9999.ebuild 710
-RMD160 5ca711f28c5daf4bffe04bb3ef04f7c6e504ad2c josm-9999.ebuild 710
-SHA256 c256f3567c3298b755f30fc22dec475b4ee7381ef84c9384d242ca66f2a08bbf josm-9999.ebuild 710
-MISC ChangeLog 1144 RMD160 59ba2e2e422e6a0adee430bf233c58d4fe7eeee1 SHA1 10c37ff753c6768b24c89ea3cadacfc0ce232113 SHA256 3be4824c6d8078b52e4ee21c39a88e0be4d9a698db3d58baf3761574d303d680
-MD5 378fd949f39e6a88a529e1461c528e4e ChangeLog 1144
-RMD160 59ba2e2e422e6a0adee430bf233c58d4fe7eeee1 ChangeLog 1144
-SHA256 3be4824c6d8078b52e4ee21c39a88e0be4d9a698db3d58baf3761574d303d680 ChangeLog 1144
-MISC metadata.xml 237 RMD160 20944f06e761a57587043f3ec7ec969a5ab9bdcc SHA1 33b0366a9efeb0caad5712fb7e628147dff924be SHA256 29eb01e164be9510d6a51d6477c169df641127a2a2df064c9d99c90c067ac3d7
-MD5 7513657d7919b28b327d0fb603b1b95f metadata.xml 237
-RMD160 20944f06e761a57587043f3ec7ec969a5ab9bdcc metadata.xml 237
-SHA256 29eb01e164be9510d6a51d6477c169df641127a2a2df064c9d99c90c067ac3d7 metadata.xml 237
+EBUILD josm-1.5_p486.ebuild 1478 RMD160 3f07a7f985c2be42a908d9e408281adf4ed3d6b9 SHA1 885aea0253fd06d72e3c2e70c7c05fef06c42a57 SHA256 87505b96163481aba565eaa576a868dba92aaa538e9db1ad214965a64809e263
+MD5 a31315a49a05d56f41931e8feb1d3482 josm-1.5_p486.ebuild 1478
+RMD160 3f07a7f985c2be42a908d9e408281adf4ed3d6b9 josm-1.5_p486.ebuild 1478
+SHA256 87505b96163481aba565eaa576a868dba92aaa538e9db1ad214965a64809e263 josm-1.5_p486.ebuild 1478
+EBUILD josm-9999.ebuild 845 RMD160 988c2c839a0234695f7b20e26ef8604b17bc03ee SHA1 efd0292b6d71870d94d830425c364c3640bea1b2 SHA256 919f29ae449a6267aa07b52b0f2506e0391c8abc8e48f16632911641ac5cc961
+MD5 63501e24c82e0a9ef6b0e0a995534159 josm-9999.ebuild 845
+RMD160 988c2c839a0234695f7b20e26ef8604b17bc03ee josm-9999.ebuild 845
+SHA256 919f29ae449a6267aa07b52b0f2506e0391c8abc8e48f16632911641ac5cc961 josm-9999.ebuild 845
+MISC ChangeLog 1642 RMD160 1bf31956a86d2f9062ab1a0b9620adcb9dcd902e SHA1 a275398492a39480496cba55225126d4097819dd SHA256 d56a218efb0c87d5378145e7eae39c56d1509d0486ab9721965557f8099a6496
+MD5 1eb95edcc707cb2163e54716c6dea920 ChangeLog 1642
+RMD160 1bf31956a86d2f9062ab1a0b9620adcb9dcd902e ChangeLog 1642
+SHA256 d56a218efb0c87d5378145e7eae39c56d1509d0486ab9721965557f8099a6496 ChangeLog 1642
+MISC metadata.xml 181 RMD160 775d1f2c12e0b493052c783fc1ea0bc2b4f69ef3 SHA1 1c0e4ca737823741153b9c78f892f3a9d70f8e1e SHA256 1c1de7f7ce2e2c7b366cf4c54e3a8549b8a6b0aeadf590b3c29cc44aa252f325
+MD5 b6d9b0fd0b2a9026981c884890ac6055 metadata.xml 181
+RMD160 775d1f2c12e0b493052c783fc1ea0bc2b4f69ef3 metadata.xml 181
+SHA256 1c1de7f7ce2e2c7b366cf4c54e3a8549b8a6b0aeadf590b3c29cc44aa252f325 metadata.xml 181
 MD5 958794ad06b97afb09a9eb46e56d7a70 files/digest-josm-1.5_p486 1181
 RMD160 318dd70eb6fe86041ee44987beb3ee80703a1b06 files/digest-josm-1.5_p486 1181
 SHA256 05d005b107034c27933df7b08608d3f793c6c362490db6cac84c346f7ff3dcfe files/digest-josm-1.5_p486 1181
