@@ -1,8 +1,19 @@
 # ChangeLog for sci-geosciences/josm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.5 2007/11/07 15:37:37 hanno Exp $
+# $Header: $
+
+*josm-9999 (14 Dec 2007)
+
+  14 Dec 2007; Dennis <dennis.lists@googlemail.com> josm-9999.ebuild:
+  Updated to use the right libdir
+  Create icon and menu-entry
+
 
 *josm-1.5_p486 (14 Dec 2007)
+
+  14 Dec 2007; Dennis <dennis.lists@googlemail.com> josm-1.5_p486.ebuild:
+  Updated to use the right libdir
+  Use virtual/jre as the ebuild does not compile anything
 
   14 Dec 2007; Lorenz Kiefner <openstreetmap-at-lorenz.kiefner.de> +josm-1.5_p486.ebuild:
   Version bump, marked stable for x86 and amd64
